--- a/src/main/webapp/css/mailcheck.css
+++ b/src/main/webapp/css/mailcheck.css
@@ -8,13 +8,13 @@
   z-index: 2;
 }
 
-.form-signin input[type="text"] {
+.form-signin input[type="email"] {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
 
-.form-signin input[type="password"] {
+.form-signin input[type="text"] {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
